# DevCLI

./: README.md  __main__.py  app.py  config.py  main.py  pyproject.toml  requirements.txt
core/: command_parser.py  lifecycle.py  model_gateway.py  session_manager.py  task_executor.py  task_planner.py
db/: database.py  models.py
tools/: base.py  code.py  filesystem.py  git.py  lint.py  shell.py  test.py
utils/: crypto.py
