[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "devcli"
version = "0.1.0"
description = "AI-powered full-stack development agent with TUI"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "rich>=13.0.0",
    "textual>=0.52.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.27.0",
    "watchfiles>=0.21.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-python>=0.20.0",
    "tree-sitter-typescript>=0.20.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
devcli = "devcli.main:main"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
target-version = ["py311"]
line-length = 100
